tdf#165261 - PPTX import: fix text in shape is left-aligned

instead of being centered

regression from: 1d9ce0a67a71e51569cd33c26270eeece587a354
(tdf#162571 - sd: Text box expands or shrinks on left or right or...)

Change-Id: Ieed39426dc5aec7a34d15bbb0a4faaeba04ba50f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181822
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
(cherry picked from commit f9b9bf030618f66eccf9168413f1935ac521f161)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181859
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>